--- a/de_style.css
+++ b/de_style.css
@@ -401,6 +401,9 @@ direction:rtl;text-align:right;text-indent:0px;margin-top:0pt;margin-bottom:0pt;
 div.de_D8A905EC7A
 {
 margin-top:0pt;margin-bottom:0pt;}
+div.de_E2924902D1
+{
+text-align:right;margin-top:0pt;margin-bottom:0pt;}
 div.de_EC4BE89A0F
 {
 direction:rtl;text-align:right;margin-top:0pt;margin-bottom:0pt;}
@@ -410,9 +413,9 @@ text-align:left;margin-top:0pt;margin-bottom:0pt;}
 img.de_780D01ADE8
 {
 margin-top: 0px; margin-right: 0px; margin-bottom: 0px; margin-left: 0px;}
-img.de_D457E58A2E
+img.de_D7A9C94272
 {
-margin-top: 0px; margin-right: 8px; margin-bottom: 8px; margin-left: 8px;}
+margin-top: 8px; margin-right: 8px; margin-bottom: 8px; margin-left: 8px;}
 span.de_23DED897D5
 {
 	font-size: 14pt;
